--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@heroicons/react": "^2.0.17",
     "firebase": "^9.22.0",
     "next": "13.4.1",
-    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
