--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "firebase": "^9.22.0",
+    "moment": "^2.29.4",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
