--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "firebase": "^9.22.0",
+    "framer-motion": "^10.12.12",
     "moment": "^2.29.4",
     "next": "13.4.1",
     "react": "18.2.0",
