--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "recoil": "^0.7.7"
   },
